# practicum_graduate_work

./: .gitignore  README.md  help.md
assistant_api/src/: main.py  pyproject.toml
docs/: assistant.drawio
nginx/: nginx.conf
services/assistant/: compose.yml
services/assistant/assistant_api/: Dockerfile  pyproject.toml
services/assistant/assistant_api/src/: config.toml  config_dev.toml  main.py  pyproject.toml
services/assistant/assistant_api/src/api/v1/: dialogs.py  healthcheck.py  webhook.py
services/assistant/assistant_api/src/assistant/: abstract.py  alice.py
services/assistant/assistant_api/src/core/: auth.py  logger.py  settings.py  tracing.py
services/assistant/assistant_api/src/interface/: movies_api.py
services/assistant/assistant_api/src/schema/: alice.py  mongo.py
services/assistant/assistant_api/src/service/: dialog_controller.py  dialog_history.py  dialog_keeper.py  mongo.py  nlu.py  reply_generator.py  services_interactor.py
services/assistant/assistant_api/tests/functional/: .env.example  compose.tests.yml  config.py
services/assistant/assistant_api/tests/functional/src/fastapi/: test_dialogkeeper.py  test_healthcheck.py  test_webhook.py  tests_webhook.py
services/assistant/assistant_api/tests/functional/src/fixtures/: mongo_fixt.py
services/assistant/assistant_api/tests/functional/src/test_data/: alice.py
services/assistant/assistant_api/tests/stress/: locustfile.py
services/auth/: .env.example  docker-compose.yml
services/auth/src/: .dockerignore  Dockerfile  main.py  pyproject.toml  superuser_cli.py
services/auth/src/api/v1/: access.py  auth.py  oauth.py  personal.py  roles.py
services/auth/src/core/: config.py  exceptions.py  oauth_provider.py
services/auth/src/db/: prepare_db.py
services/auth/src/db/postgres/: postgres.py  session_handler.py  storage.py
services/auth/src/db/redis/: cache_storage.py  redis.py  redis_storage.py
services/auth/src/migrations/: env.py
services/auth/src/migrations/versions/: 0a2ab3a51734_initial_tables.py  0b2b4c10cfd5_oauth_user.py
services/auth/src/models/: device.py  oauth.py  role.py  token.py  user.py  user_history.py  user_role.py
services/auth/src/schemas/: access.py  device.py  mixins.py  oauth.py  pagination.py  role.py  token.py  user.py  user_history.py
services/auth/src/services/: access_service.py  auth_service.py  oauth_service.py  role_service.py  user_service.py
services/auth/src/setup/: tracer.py
services/auth/src/util/: JWT_helper.py  hash_helper.py
services/movies/fastapi/: Dockerfile  main.py  pyproject.toml
services/movies/fastapi/api/v1/: films.py  genres.py  persons.py
services/movies/fastapi/core/: cache.py  config.py  enum.py  es_queries.py  exceptions.py  models.py  service.py
services/movies/fastapi/db/: redis.py
services/movies/fastapi/models/: film.py
services/movies/fastapi/schemas/: advanced_search.py  token.py
services/movies/fastapi/services/: film.py  genre.py  person.py
services/movies/fastapi/util/: JWT_helper.py
(+212 files in other folders)
