[tool.poetry]
name = "Assistant"
version = "0.1.0"
description = ""
authors = ["Maksim Kosinov <mkosinov@mail.ru>"]

[tool.poetry.dependencies]
python = "^3.12"
fastapi = "^0.111.0"
pydantic-settings = "^2.3.4"
gunicorn = "^22.0.0"
backoff = "^2.2.1"
timeout-decorator = "^0.5.0"
wrapt-timeout-decorator = "^1.5.1"


[tool.poetry.group.dev.dependencies]
isort = "^5.13.2"
ruff = "^0.5.0"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
